<resources>
    <string name="app_name">Лидерство</string>
    <string name="main_title">Лидерство</string>
    <string name="option1">Проверить себя</string>
    <string name="option2">Развитие</string>
    <string name="option3">Разное</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="next_txt">Далее</string>
    <string name="to_home">На главную</string>
    <string name="leaders">Лидеры</string>
</resources>